--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,7 @@
     "erb": "html"
   },
   "[ruby]": {
-    "editor.defaultFormatter": "mbessey.vscode-rufo",
+    "editor.defaultFormatter": "rubocop.vscode-rubocop",
     "editor.formatOnSave": false
   },
   "[erb]": {
