Add npm install step

--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -57,5 +57,9 @@ jobs:
       #   run: bin/brakeman -q -w2
       # - name: Lint Ruby files
       #   run: bundle exec rubocop --parallel
-      - name: Lint JavaScript files
-        run: npm run lint
+      - name: Lint Javascript files
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+      - run: npm ci
+      - run: npm run lint
