--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -55,8 +55,8 @@ jobs:
       #   run: bin/bundler-audit --update
       # - name: Security audit application code
       #   run: bin/brakeman -q -w2
-      # - name: Lint Ruby files
-      #   run: bundle exec rubocop --parallel
+      - name: Lint Ruby files
+        run: bundle exec rubocop --parallel
       - name: Lint Javascript files
         uses: actions/setup-node@v3
         with:
